--- a/BcpApi/appsettings.json
+++ b/BcpApi/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LT122527;Initial Catalog=BCP;Integrated Security=False;User Id=sa;Password=sa@123;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=10.126.70.6;Initial Catalog=BCP;Integrated Security=False;User Id=plumtree;Password=plumtree;MultipleActiveResultSets=True"
   },
+  "WebApplicationUrl": "http://localhost:4200",
   "AllowedHosts": "*"
 }
