--- a/BcpApi/appsettings.json
+++ b/BcpApi/appsettings.json
@@ -10,5 +10,10 @@
     "DefaultConnection": "Data Source=10.126.70.6;Initial Catalog=BCP;Integrated Security=False;User Id=plumtree;Password=plumtree;MultipleActiveResultSets=True"
   },
   "WebApplicationUrl": "http://localhost:4200",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Okta": {
+    "OktaDomain": "https://test-bcp-sekurit.okta.com",
+    "AuthorizationServerId": "default",
+    "Audience": "api://default"
+  }
 }
