--- a/BcpApi/Bcp.Api.csproj
+++ b/BcpApi/Bcp.Api.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bcp.Data\Bcp.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DownloadedFiles\" />
   </ItemGroup>
 
 </Project>
