--- a/BcpApi/Bcp.Api.csproj
+++ b/BcpApi/Bcp.Api.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DownloadedFiles\**" />
+    <Content Remove="DownloadedFiles\**" />
+    <EmbeddedResource Remove="DownloadedFiles\**" />
+    <None Remove="DownloadedFiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="6.4.4" />
@@ -19,10 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bcp.Data\Bcp.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DownloadedFiles\" />
   </ItemGroup>
 
 </Project>
